--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -14,10 +14,10 @@
 <body>
   <a href="#content" class="skip-to-content" tabindex="0">Skip to Content</a>
   <header class="header">
-    <a href="#" class="logo" tabindex="0"><img src="../public/images/heros/logo.png"
-        alt="Logo DelishDine">DelishDine</a>
-
-    <a href='javascript:void(0)' class="menu-icon" id="menu-icon">
+    <a href="#" name="logo" class="logo" tabindex="0">
+      <img src="../public/images/heros/logo.png" alt="Logo DelishDine" width="44" height="44"> DelishDine </a>
+    </a>
+    <a href='javascript:void(0)' name="hamburger" class="menu-icon" id="menu-icon">
       <div class="bar"></div>
       <div class="bar"></div>
       <div class="bar"></div>
