--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -7,6 +7,7 @@
     --grey-color: #636363eb;
     --text-color: white;
     --bg-color: #9a9696;
+    --bg-color-dark: #5d5d5d;
 }
 
 /*SCROLL*/
@@ -176,33 +177,43 @@ section {
     width: 100%;
     display: flex;
     align-items: center;
-    justify-content: center;
-    position: relative;
-    background: url(../public/images/heros/hero-image_4.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
+    /* background: url(../public/images/heros/hero-image_4.jpg); */
+    /* background-repeat: no-repeat; */
+    /* background-size: cover; */
+    /* background-position: center; */
+}
+
+.home .picture {
+    position: absolute;
+    width: 100%;
     top: 0;
     left: 0;
     bottom: 0;
     right: 0;
-    opacity: 0.85;
 }
 
-.home::before {
-    content: "";
+.home .picture .filter {
+    width: 100%;
+    height: 100vh;
     position: absolute;
     top: 0;
     left: 0;
     bottom: 0;
     right: 0;
-    background: rgba(0, 0, 0, 0.621);
-    z-index: -1;
+    background: var(--bg-color-dark);
+    opacity: 0.3;
+}
+
+.home img {
+    position: relative;
+    height: 100vh;
+    top: 0;
 }
 
 .home-content {
     text-align: center;
     display: block;
+    margin: 0 auto;
     color: var(--text-color);
     /* max-width: 60rem; */
     position: relative;
@@ -475,6 +486,12 @@ section {
     justify-content: flex-end;
     font-size: 15px;
     color: #ffd700;
+}
+
+.empty-container {
+    padding: 10px;
+    color: gray;
+    font-size: 1rem;
 }
 
 
